# digitaltwin

./: .gitignore
backend/: Dockerfile  context.py  deploy.py  pyproject.toml  requirements.txt  resources.py  server.py
backend/utilities/: settings.py  tools.py
frontend/: next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: twin.tsx
memory/: 14b3c9c8-29b4-4ca7-a3c4-3b32a3374666.json
