[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.84",
    "chromadb>=1.5.6",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.1",
    "mangum>=0.21.0",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.44.0",
]
